NXP-25186: refactor descriptors and components of some modules
- nuxeo-rutime-kv
- nuxeo-rutime-migration
- nuxeo-rutime-mongodb
- nuxeo-rutime-pubsub
- nuxeo-runtime-redis
- nuxeo-rutime-stream
- nuxeo-core-bulk
- nuxeo-core-cache
- nuxeo-core-io
- nuxeo-automation-server
- nuxeo-automation-io